# crew-ai-helloworld

./: README.md
proj1/: README.md  pyproject.toml
proj1/src/proj1/: crew.py  main.py
