[project]
name = "proj1"
version = "0.1.0"
description = "proj1 using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
proj1 = "proj1.main:run"
run_crew = "proj1.main:run"
train = "proj1.main:train"
replay = "proj1.main:replay"
test = "proj1.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
